@@ -209,6 +209,20 @@ name|conf
 init|=
 literal|null
 decl_stmt|;
+specifier|private
+specifier|static
+name|String
+name|TAB
+init|=
+literal|"\t"
+decl_stmt|;
+specifier|private
+specifier|static
+name|String
+name|NEWLINE
+init|=
+literal|"\r\n"
+decl_stmt|;
 annotation|@
 name|Override
 specifier|public
@@ -570,7 +584,43 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|i
+operator|<
+name|value
+operator|.
+name|size
+argument_list|()
+operator|-
+literal|1
+condition|)
+block|{
+comment|// do not put the TAB for the last column
+name|System
+operator|.
+name|out
+operator|.
+name|print
+argument_list|(
+name|RCFileCat
+operator|.
+name|TAB
+argument_list|)
+expr_stmt|;
 block|}
+block|}
+name|System
+operator|.
+name|out
+operator|.
+name|print
+argument_list|(
+name|RCFileCat
+operator|.
+name|NEWLINE
+argument_list|)
+expr_stmt|;
 block|}
 return|return
 literal|0
